--- a/package.json
+++ b/package.json
@@ -3,12 +3,7 @@
   "version": "1.0.0",
   "description": "A dark, atmospheric storytelling platform.",
   "scripts": {
-    "start": "serve"
+    "build": "mkdir -p dist && cp index.html manifest.json icon.svg _redirects dist/"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.292.0",
-    "@google/genai": "^1.0.0"
-  }
+  "dependencies": {}
 }
