feat: Add Google Script URL and update build script
Includes the Google Script URL for AI integration and removes the CNAME file from the build script.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A dark, atmospheric storytelling platform.",
   "scripts": {
-    "build": "mkdir -p dist && cp index.html manifest.json icon.svg _redirects CNAME dist/"
+    "build": "mkdir -p dist && cp index.html manifest.json icon.svg _redirects dist/"
   },
   "dependencies": {}
 }
